--- a/example.html
+++ b/example.html
@@ -68,7 +68,7 @@
     </main>
 
     <footer>
-        <p>Onn Mini Rugged Speaker Dissection Report | 2025 | By Cody Swann</p>
+        <p>Onn Mini Rugged Speaker Dissection ES Report | 2025 | By Cody Swann</p>
     </footer>
 </body>
 </html>
