--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="#photo-journal">Photo Journal</a></li>
         <li><a href="#analysis">Analysis</a></li>
         <li><a href="#reassembly">Reassembly</a></li>
-        <li><a href="#download">Download Report</a></li>
+        <li><a href="#download">Download</a></li>
       </ul>
     </nav>
   </header>
@@ -29,42 +29,40 @@
 
     <section id="market-info">
       <h2>2. Product Market and Retail Information</h2>
-      <p>The Onn Mini Rugged Speaker is sold at <strong>Walmart</strong> for around <strong>$10</strong>. It is a budget-friendly, Bluetooth-enabled portable speaker. Several variants exist, but they follow a similar internal structure.</p>
+      <p>The Onn Mini Rugged Speaker is sold at <strong>Walmart</strong> for around <strong>$10</strong>. It is a budget-friendly, Bluetooth-enabled portable speaker with a rugged design.</p>
     </section>
 
     <section id="photo-journal">
       <h2>3. Dissection Photo Journal</h2>
-      <p>Photos will be displayed here. Add your image files to the same folder and use code like:</p>
       <img src="images/speaker_front.jpg" alt="Speaker Front View" />
       <img src="images/pcb_closeup.jpg" alt="PCB Close-Up" />
     </section>
 
     <section id="analysis">
       <h2>4 & 5. Product Operation and Analysis</h2>
-      <h3>Notable Chips on the PCB:</h3>
+      <p><strong>Notable chips on PCB:</strong></p>
       <ul>
-        <li><strong>IP4056:</strong> Battery Charging Chip with ~16 nearby resistors/capacitors</li>
-        <li><strong>LTK5302:</strong> High-Quality Audio Amplifier with ~18 passives</li>
-        <li><strong>ATS2853:</strong> Bluetooth Chip with ~24 passives</li>
+        <li><strong>IP4056:</strong> Battery Charging Chip (~16 passives)</li>
+        <li><strong>LTK5302:</strong> Audio Amplifier (~18 passives)</li>
+        <li><strong>ATS2853:</strong> Bluetooth Chip (~24 passives)</li>
       </ul>
-      <p><strong>Resistor 4R7:</strong> Found near amplifier section. Based on common prices (~$0.05), total cost for 58 resistors: ~$2.90</p>
-      <p>Three-prong component identified as a transistor. Black components are resistors; brown ones are capacitors.</p>
+      <p><strong>Resistor 4R7:</strong> Found near amplifier section. 58 resistors total ≈ $2.90 (at $0.05 each).</p>
     </section>
 
     <section id="reassembly">
       <h2>6. Reassembly</h2>
-      <p>The speaker was successfully reassembled and functions as before. This demonstrates the importance of detailed photo tracking during disassembly.</p>
+      <p>The speaker was successfully reassembled and still functions. Careful tracking of screws and parts was key.</p>
     </section>
 
     <section id="download">
       <h2>7. Download Report</h2>
-      <p>You can download the full report including diagrams and all photos:</p>
-      <a href="Onn_Mini_Rugged_Speaker_Report.zip" class="download-button" download>📥 Download Dissection Report</a>
+      <p>Click below to download the full dissection report (includes photos and diagrams):</p>
+      <a href="Onn_Mini_Rugged_Speaker_Report.zip" class="download-button" download>📥 Download Report</a>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Cody Swann | Embedded Systems - Electronics Dissection</p>
+    <p>&copy; 2025 Cody Swann | Embedded Systems Dissection Project</p>
   </footer>
 </body>
 </html>
