--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header>
-    <h1>Electronics Dissection: Onn Mini Rugged Speaker</h1>
-    <nav>
-      <ul>
-        <li><a href="#introduction">Introduction</a></li>
-        <li><a href="#market-info">Market Info</a></li>
-        <li><a href="#photo-journal">Photo Journal</a></li>
-        <li><a href="#analysis">Analysis</a></li>
-        <li><a href="#reassembly">Reassembly</a></li>
-        <li><a href="#download">Download</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <h1>Onn Mini Rugged Speaker – Electronics Dissection Project</h1>
+  <p>by Cody Swann</p>
+  <nav>
+    <ul>
+      <li><a href="#introduction">Introduction</a></li>
+      <li><a href="#market">Product Market Info</a></li>
+      <li><a href="#photo-journal">Photo Journal</a></li>
+      <li><a href="#operation">Operation</a></li>
+      <li><a href="#analysis">Analysis</a></li>
+      <li><a href="#reassembly">Reassembly</a></li>
+      <li><a href="#lessons">Lessons Learned</a></li>
+      <li><a href="#download">Download</a></li>
+    </ul>
+  </nav>
+</header>
+
 
   <main>
     <section id="introduction">
