Updated test with ESdisection example.html

--- a/example.html
+++ b/example.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Onn Mini Rugged Speaker Dissection - Example</h1>
-        <p>By Cody Swann</p>
+        <h1>Onn Mini Rugged Speaker Dissection</h1>
+        <p>Electronics Dissection Project by Cody Swann</p>
     </header>
     
     <nav>
@@ -26,12 +26,12 @@
     <main>
         <section id="overview">
             <h2>Overview</h2>
-            <p>This is an example of a detailed dissection report of the Onn Mini Rugged Speaker. The objective is to showcase the components, process, and pricing involved in this project.</p>
+            <p>The Onn Mini Rugged Speaker is a compact Bluetooth speaker built for durability and portability. This dissection project aims to analyze its internal components, functionality, and market value to gain insight into its design and manufacturing choices. We will look at the speaker’s performance, the chips used, and the overall construction that makes it such an affordable yet high-performing device.</p>
         </section>
 
         <section id="dissection">
             <h2>Dissection Process</h2>
-            <p>In this section, we describe the process of taking apart the speaker, identifying the components, and understanding the internal organization.</p>
+            <p>In this section, we describe the process of carefully disassembling the Onn Mini Rugged Speaker, documenting each step of the journey, and analyzing its internal components. This includes examining the speaker's internal circuitry, chips, and the assembly/disassembly process.</p>
             <img src="images/dissection_step1.jpg" alt="Opening the speaker">
             <img src="images/dissection_step2.jpg" alt="Removing internal components">
         </section>
@@ -41,29 +41,31 @@
             <ul>
                 <li>Resistors</li>
                 <li>Capacitors</li>
+                <li>Bluetooth chip</li>
+                <li>Audio amplifier chip</li>
                 <li>Microcontroller</li>
-                <li>Speaker</li>
+                <li>Battery management chip</li>
             </ul>
         </section>
 
         <section id="chips">
             <h2>Chips and Components Analysis</h2>
-            <h3>IP4056 - Battery Charger Chip</h3>
-            <p>The IP4056 chip is responsible for charging the internal battery efficiently, making sure the speaker stays powered.</p>
-            <h3>LTK5302 - Audio Amplifier Chip</h3>
-            <p>This chip amplifies the audio signals to drive the speaker effectively, ensuring sound quality and loudness.</p>
-            <h3>ATS2853 - Bluetooth Chip</h3>
-            <p>This Bluetooth module allows the speaker to connect wirelessly with mobile devices, providing convenience and ease of use.</p>
+            <h3>Bluetooth Chip</h3>
+            <p>The Bluetooth chip is crucial for wireless communication, allowing the speaker to connect seamlessly to Bluetooth-enabled devices.</p>
+            <h3>Audio Amplifier Chip</h3>
+            <p>This component boosts the audio signal, ensuring that the speaker produces loud and clear sound, even at high volumes.</p>
+            <h3>Battery Management Chip</h3>
+            <p>This chip controls the charging and discharging cycles of the speaker’s internal battery, ensuring it operates efficiently and safely.</p>
         </section>
 
         <section id="pricing">
             <h2>Pricing</h2>
-            <p>The Onn Mini Rugged Speaker is available at Walmart for $10, making it an affordable choice for consumers.</p>
+            <p>The Onn Mini Rugged Speaker is priced at approximately $9.88 at Walmart, making it an affordable option for budget-conscious consumers looking for quality audio in a durable package.</p>
         </section>
 
         <section id="download">
             <h2>Download Report</h2>
-            <a href="Onn_Mini_Rugged_Speaker_Report.zip" download class="download-button">Download Dissection Report</a>
+            <a href="Onn_Mini_Rugged_Speaker_Report.zip" download class="download-button">Download Full Report (.zip)</a>
         </section>
     </main>
 
