Updated introduction index.html

--- a/index.html
+++ b/index.html
@@ -29,38 +29,50 @@
   <main>
     <section id="introduction">
       <h2>1. Introduction</h2>
-      <p>The Onn Mini Rugged Speaker is a compact, wireless Bluetooth speaker designed for portability and ruggedness. It's ideal for outdoor enthusiasts and budget-conscious consumers looking for durable audio equipment. This project dissects and analyzes its components, operation, and market impact.</p>
+      <p>My name is Cody Swann, and I am a junior at Mississippi State University studying Computer Engineering. This is my dissection project for Embedded Systems (ECE 4724/6724).</p>
+      <p>The device I chose is the Onn Mini Rugged Speaker. I selected this device because I enjoy learning how embedded systems power the everyday electronics we rely on. I'm especially interested in how compact audio devices like this deliver both durability and functionality on a budget. This project gave me the opportunity to explore the hardware behind Bluetooth connectivity, audio amplification, and portable power management—all areas that tie into my interests in engineering and consumer tech.</p>
     </section>
 
     <section id="market">
       <h2>2. Product Market and Retail Information</h2>
-      <p>Retail Price: $9.88 (Walmart)<br>
-      The speaker is widely available in stores across the U.S. and is designed to be a reliable, affordable solution for people who need portable sound. Its rugged build and competitive price point make it an attractive option for a wide audience.</p>
+      <p>Retail price: $10 (Walmart)<br>
+      The speaker is widely available in stores across the U.S., known for durability and affordability.</p>
     </section>
 
     <section id="photo-journal">
       <h2>3. Dissection Photo Journal</h2>
-      <p>Photos and documentation of the disassembly steps, along with key observations, will be provided here.</p>
+      <p>Photos and documentation of each disassembly step will be added here.</p>
     </section>
 
     <section id="operation">
       <h2>4. Product Operation</h2>
-      <p>The speaker operates via Bluetooth 5.0 for seamless connectivity with devices. The battery management system ensures long-lasting playtime, while the integrated controls provide an intuitive user experience.</p>
+      <p>Usage modes, timing diagrams, and interface notes will go here.</p>
     </section>
 
     <section id="analysis">
       <h2>5. Product Analysis</h2>
-      <p>Internal components of interest include resistors, capacitors, and chips responsible for Bluetooth connectivity, audio amplification, and battery management. Further analysis will be provided based on the internal teardown.</p>
+      <p>
+        - 16 resistors/capacitors near IP4056 (battery charger chip)  <br>
+        - 18 resistors/capacitors in LTK5302 zone (audio amplifier)  <br>
+        - 24 resistors/capacitors near ATS2853 (Bluetooth chip)  <br><br>
+        Notable components:  <br>
+        - “4R7” is a resistor  <br>
+        - The 3-prong component is a transistor  <br>
+        - Black components = resistors  <br>
+        - Brown components = capacitors  <br><br>
+        Example cost breakdown:  <br>
+        If one resistor costs $0.01 and there are 58 of them, the total is ~$0.58.
+      </p>
     </section>
 
     <section id="reassembly">
       <h2>6. Product Reassembly</h2>
-      <p>Reassembly involves ensuring all internal parts are correctly placed back into the housing, restoring the speaker to its original functional state.</p>
+      <p>The speaker will be reassembled and tested to confirm its original function is restored.</p>
     </section>
 
     <section id="lessons">
       <h2>7. Lessons Learned</h2>
-      <p>This dissection revealed the importance of rugged designs for outdoor devices and the balance between cost, functionality, and durability.</p>
+      <p>This section will summarize what was learned through the dissection and analysis process.</p>
     </section>
 
     <section id="download">
