--- a/index.html
+++ b/index.html
@@ -29,14 +29,37 @@
   <main>
     <section id="introduction">
       <h2>1. Introduction</h2>
-      <p>My name is Cody Swann, and I am a junior at Mississippi State University studying Computer Engineering. This is my dissection project for Embedded Systems (ECE 4724/6724).</p>
-      <p>The device I chose is the Onn Mini Rugged Speaker. I selected this device because I enjoy learning how embedded systems power the everyday electronics we rely on. I'm especially interested in how compact audio devices like this deliver both durability and functionality on a budget. This project gave me the opportunity to explore the hardware behind Bluetooth connectivity, audio amplification, and portable power management—all areas that tie into my interests in engineering and consumer tech.</p>
+      <p>My name is Cody Swann and I am a junior at Mississippi State University studying Computer Engineering. This is my dissection project for Embedded Systems (ECE 4724/6724).
+      <br><br>
+      I chose the Onn Mini Rugged Speaker for this assignment because of my interest in consumer electronics and how embedded systems drive their functionality. Portable Bluetooth speakers are common and often inexpensive, yet they integrate multiple systems including power management, wireless communication, and audio amplification. Dissecting this device offered me the chance to combine practical analysis with my interest in embedded design.</p>
     </section>
 
     <section id="market">
       <h2>2. Product Market and Retail Information</h2>
-      <p>Retail price: $10 (Walmart)<br>
-      The speaker is widely available in stores across the U.S., known for durability and affordability.</p>
+      <p>
+        <strong>Product History and Company Background</strong><br>
+        Onn is Walmart's private-label electronics brand, launched to provide consumers with affordable alternatives to name-brand technology. The Onn line includes headphones, speakers, streaming devices, and other low-cost gadgets. Since its debut, Onn has grown to become a popular choice for budget-conscious shoppers looking for functional and accessible tech without premium pricing.
+        <br><br>
+        The Onn Mini Rugged Speaker is part of a broader family of Bluetooth speakers designed to be portable, durable, and water-resistant. These speakers target casual users who want a lightweight audio solution for outdoor or on-the-go use. The rugged aspect of the speaker refers to its reinforced outer shell, designed to handle drops and rough handling.
+        <br><br>
+        <strong>Retail Pricing</strong><br>
+        The speaker is primarily sold through Walmart stores and the Walmart website. Its low cost—around $10—makes it one of the most affordable Bluetooth speaker options on the market.
+        <br><br>
+        <strong>Prices from Various Retailers</strong><br>
+        <ul>
+          <li>Walmart (official source): $9.88</li>
+          <li>eBay (new condition): $7.99 – $12.50</li>
+          <li>Amazon (limited listings): ~$11.95</li>
+        </ul>
+        
+        <strong>Product Line Variations</strong><br>
+        The Onn Mini Rugged Speaker comes in a variety of colors and occasionally different form factors, but the core design remains consistent: a compact, rechargeable Bluetooth speaker with basic onboard controls. Variants may differ in battery life, button layout, or casing material, but all aim for simple wireless playback at a low cost.
+        <br><br>
+        <strong>Market Position</strong><br>
+        Onn products compete directly with other budget electronics like those from brands such as Blackweb (another Walmart line), iLive, and some Anker models. What sets Onn apart is its availability, direct association with Walmart, and extremely competitive pricing. It fills a niche for users who need short-term or entry-level tech without high performance demands.
+        <br><br>
+        Overall, the Onn Mini Rugged Speaker is an accessible and cost-effective product that showcases how embedded systems can be mass-produced for everyday use at scale.
+      </p>
     </section>
 
     <section id="photo-journal">
@@ -55,11 +78,13 @@
         - 16 resistors/capacitors near IP4056 (battery charger chip)  <br>
         - 18 resistors/capacitors in LTK5302 zone (audio amplifier)  <br>
         - 24 resistors/capacitors near ATS2853 (Bluetooth chip)  <br><br>
+
         Notable components:  <br>
         - “4R7” is a resistor  <br>
         - The 3-prong component is a transistor  <br>
         - Black components = resistors  <br>
         - Brown components = capacitors  <br><br>
+
         Example cost breakdown:  <br>
         If one resistor costs $0.01 and there are 58 of them, the total is ~$0.58.
       </p>
