Updated nav index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <p>Other brands offering similar mini Bluetooth speakers include JBL Go, Anker Soundcore Mini, and Sony SRS-XB series. These tend to feature similar connectivity and ruggedness, but at a higher price point. The Onn speaker fills the budget niche with fewer frills but a surprising amount of durability and performance for the price.</p>
     </section>
 
-     <section id="dissection-photo-journal">
+     <section id="photo-journal">
         <h2>Dissection Photo Journal</h2>
         <p>This section describes the disassembly process of the Onn Mini Rugged Speaker. Each image corresponds to a specific stage in the dissection.</p>
 
